--- a/nginx-proxy-multi/nginx-proxy-watcher/nginx.tmpl
+++ b/nginx-proxy-multi/nginx-proxy-watcher/nginx.tmpl
@@ -68,7 +68,7 @@ server {
 server {
 	gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-	listen 443;
+	listen 443 ssl spdy deferred;
 	server_name {{ $host }};
 	proxy_buffering off;
 	error_log /proc/self/fd/2;
@@ -77,14 +77,16 @@ server {
 	ssl on;
 	ssl_certificate /certificates/server.crt;
 	ssl_certificate_key /certificates/server.key;
-	ssl_session_timeout 5m;
-	ssl_protocols SSLv3 TLSv1;
-	ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
 	ssl_prefer_server_ciphers on;
-
-	add_header Strict-Transport-Security "max-age=31536000;";
+	ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS:!AES256;
+	ssl_session_cache shared:SSL:10m;
+	ssl_session_timeout 10m;
+	ssl_stapling on;
 
 	location / {
+		add_header Strict-Transport-Security "max-age=31536000;";
+
 		proxy_pass http://{{ $host }};
 		proxy_http_version 1.1;
 
