--- a/nginx-proxy-multi/nginx-proxy-watcher/nginx.tmpl
+++ b/nginx-proxy-multi/nginx-proxy-watcher/nginx.tmpl
@@ -78,15 +78,15 @@ server {
 	ssl_certificate /certificates/server.pem;
 	ssl_certificate_key /certificates/server.key;
 	ssl_prefer_server_ciphers on;
-	ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS:!AES256;
 	ssl_session_cache shared:SSL:10m;
 	ssl_session_timeout 10m;
 	ssl_stapling on;
 
-	location / {
-		add_header Strict-Transport-Security "max-age=31536000;";
+	add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
 
+	location / {
 		proxy_pass http://{{ $host }};
 		proxy_http_version 1.1;
 
