--- a/nginx-proxy-multi/nginx-proxy-watcher/nginx.tmpl
+++ b/nginx-proxy-multi/nginx-proxy-watcher/nginx.tmpl
@@ -1,33 +1,6 @@
-server {
-	listen 80 default_server;
-	server_name _; # This is just an invalid value which will never trigger on a real hostname.
-	error_log /proc/self/fd/2;
-	access_log /proc/self/fd/1;
-	return 503;
-}
-
-server {
-	listen 443 default_server;
-	server_name _; # This is just an invalid value which will never trigger on a real hostname.
-	error_log /proc/self/fd/2;
-	access_log /proc/self/fd/1;
-
-	ssl on;
-	ssl_certificate /certificates/server.pem;
-	ssl_certificate_key /certificates/server.key;
-	ssl_session_timeout 5m;
-	ssl_protocols SSLv3 TLSv1;
-	ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
-	ssl_prefer_server_ciphers on;
-
-	return 503;
-}
-
 {{ range $host, $containers := groupByMulti $ "Env.VIRTUAL_HOST" "," }}
 upstream {{ $host }} {
-
 {{ range $index, $value := $containers }}
-
 	{{ $addrLen := len $value.Addresses }}
 	{{/* If only 1 port exposed, use that */}}
 	{{ if eq $addrLen 1 }}
@@ -35,7 +8,6 @@ upstream {{ $host }} {
 		   # {{$value.Name}}
 		   server {{ $address.IP }}:{{ $address.Port }};
 		{{ end }}
-
 	{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var */}}
 	{{ else if $value.Env.VIRTUAL_PORT }}
 		{{ range $i, $address := $value.Addresses }}
@@ -44,7 +16,6 @@ upstream {{ $host }} {
 		   server {{ $address.IP }}:{{ $address.Port }};
 		   {{ end }}
 		{{ end }}
-
 	{{/* Else default to standard web port 80 */}}
 	{{ else }}
 		{{ range $i, $address := $value.Addresses }}
@@ -78,13 +49,14 @@ server {
 	ssl_certificate /certificates/server.pem;
 	ssl_certificate_key /certificates/server.key;
 	ssl_prefer_server_ciphers on;
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS:!AES256;
+	ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK;
 	ssl_session_cache shared:SSL:10m;
 	ssl_session_timeout 10m;
 	ssl_stapling on;
 
 	add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+	underscores_in_headers on;
 
 	location / {
 		proxy_pass http://{{ $host }};
