Introdused WWWHISPER_USES_RELATIVE_PATH and added some doc

--- a/wwwhisper/sites.tmpl
+++ b/wwwhisper/sites.tmpl
@@ -1,23 +1,25 @@
 {{/* Same as https://github.com/jwilder/nginx-proxy/blob/master/nginx.tmpl, except shortened */}}
 
+
+
 {{ range $protectpath, $containers := groupByMulti $ "Env.WWWHISPER_PROTECT" "," }}
 location /{{ $protectpath }}/ {
   {{ range $index, $value := $containers }}
     {{ $addrLen := len $value.Addresses }}
     {{ if eq $addrLen 1 }}
       {{ with $address := index $value.Addresses 0 }}
-        proxy_pass http://{{ $address.IP }}:{{ $address.Port }};
+        proxy_pass http://{{ $address.IP }}:{{ $address.Port }}{{ if $value.Env.WWWHISPER_USES_RELATIVE_PATH }}/{{ end }};
       {{ end }}
     {{ else if $value.Env.WWWHISPER_PORT }}
       {{ range $i, $address := $value.Addresses }}
         {{ if eq $address.Port $value.Env.WWWHISPER_PORT }}
-          proxy_pass http://{{ $address.IP }}:{{ $address.Port }};
+          proxy_pass http://{{ $address.IP }}:{{ $address.Port }}{{ if $value.Env.WWWHISPER_USES_RELATIVE_PATH }}/{{ end }};
         {{ end }}
       {{ end }}
     {{ else }}
       {{ range $i, $address := $value.Addresses }}
         {{ if eq $address.Port "80" }}
-          proxy_pass http://{{ $address.IP }}:{{ $address.Port }};
+          proxy_pass http://{{ $address.IP }}:{{ $address.Port }}{{ if $value.Env.WWWHISPER_USES_RELATIVE_PATH }}/{{ end }};
         {{ end }}
       {{ end }}
     {{ end }}
