--- a/nginx-proxy-front/nginx.tmpl
+++ b/nginx-proxy-front/nginx.tmpl
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 upstream __DOMAIN__ {
   server __REMOTE__;
 }
@@ -35,7 +40,8 @@ server {
         location / {
                 proxy_pass http://__DOMAIN__;
                 proxy_http_version 1.1;
-                proxy_set_header Connection "";
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection $connection_upgrade;
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
