--- a/nginx-proxy-multi/nginx-proxy-watcher-nossl/nginx.tmpl
+++ b/nginx-proxy-multi/nginx-proxy-watcher-nossl/nginx.tmpl
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 {{ range $host, $containers := groupByMulti $ "Env.VIRTUAL_HOST" "," }}
 upstream {{ $host }} {
 {{ range $index, $value := $containers }}
@@ -39,8 +44,8 @@ server {
 	location / {
 		proxy_pass http://{{ $host }};
 		proxy_http_version 1.1;
-
-		proxy_set_header Connection "";
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection $connection_upgrade;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
