--- a/nginx-proxy-standalone/nginx.tmpl
+++ b/nginx-proxy-standalone/nginx.tmpl
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
 server {
 	listen 80 default_server;
 	server_name _; # This is just an invalid value which will never trigger on a real hostname.
@@ -87,8 +92,8 @@ server {
 	location / {
 		proxy_pass http://{{ $host }};
 		proxy_http_version 1.1;
-
-		proxy_set_header Connection "";
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection $connection_upgrade;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
