--- a/wwwhisper/sites.tmpl
+++ b/wwwhisper/sites.tmpl
@@ -1,6 +1,9 @@
 {{/* Same as https://github.com/jwilder/nginx-proxy/blob/master/nginx.tmpl, except shortened */}}
 
-
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
 
 {{ range $protectpath, $containers := groupByMulti $ "Env.WWWHISPER_PROTECT" "," }}
 location /{{ $protectpath }}/ {
@@ -24,6 +27,10 @@ location /{{ $protectpath }}/ {
       {{ end }}
     {{ end }}
   {{ end }}
+
+  proxy_http_version 1.1;
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection $connection_upgrade;
   proxy_set_header user $user;
   proxy_set_header Host $host;
 }
