--- a/nginx-proxy-front/nginx.tmpl
+++ b/nginx-proxy-front/nginx.tmpl
@@ -8,7 +8,7 @@ upstream __DOMAIN__ {
 }
 
 server {
-        server_name __DOMAIN__;
+        server_name __SERVER_NAME__;
         proxy_buffering off;
         error_log /proc/self/fd/2;
         access_log /proc/self/fd/1;
@@ -19,7 +19,7 @@ server {
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
         listen 443 ssl spdy;
-        server_name __DOMAIN__;
+        server_name __SERVER_NAME__;
         proxy_buffering off;
         error_log /proc/self/fd/2;
         access_log /proc/self/fd/1;
@@ -27,14 +27,21 @@ server {
         ssl on;
         ssl_certificate /domains/__FOLDER__/server.__CERTTYPE__;
         ssl_certificate_key /domains/__FOLDER__/server.key;
-        ssl_prefer_server_ciphers on;
-        ssl_protocols SSLv3 TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:ECDHE-RSA-RC4-SHA:ECDHE-ECDSA-RC4-SHA:AES128:AES256:RC4-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        ssl_stapling on;
 
-        add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+        # Taken from https://cipherli.st/ 2015-09-26
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
+        ssl_session_tickets off;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        resolver $DNS-IP-1 $DNS-IP-2 valid=300s;
+        resolver_timeout 5s;
+
         underscores_in_headers on;
 
         location / {
