--- a/nginx-proxy-front/nginx.tmpl
+++ b/nginx-proxy-front/nginx.tmpl
@@ -39,8 +39,10 @@ server {
         ssl_session_tickets off;
         ssl_stapling on;
         ssl_stapling_verify on;
-        resolver $DNS-IP-1 $DNS-IP-2 valid=300s;
-        resolver_timeout 5s;
+
+        # Do we need this two? They can break internal services if they arent resolving and you are trying to use ips
+        #resolver $DNS-IP-1 $DNS-IP-2 valid=300s;
+        #resolver_timeout 5s;
 
         underscores_in_headers on;
 
