--- a/nginx-proxy-front/nginx.tmpl
+++ b/nginx-proxy-front/nginx.tmpl
@@ -34,11 +34,13 @@ server {
         ssl_prefer_server_ciphers on;
         ssl_session_cache shared:SSL:10m;
         add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
-        add_header X-Frame-Options DENY;
         add_header X-Content-Type-Options nosniff;
         ssl_session_tickets off;
         ssl_stapling on;
         ssl_stapling_verify on;
+
+        # Even if included in cipherli.st, we are restricting our "default" too much. This is up to the servers below.
+        #add_header X-Frame-Options DENY;
 
         # Do we need this two? They can break internal services if they arent resolving and you are trying to use ips
         #resolver $DNS-IP-1 $DNS-IP-2 valid=300s;
